# RustRelayChat

./: .gitignore  Cargo.toml  README.md  chat.code-workspace  init.sql
.github/: FUNDING.yml
html/: get_username.php  page.html  page.php
src/: client.rs  config.rs  dblog.rs  hasher.rs  main.rs  server.rs  stats.rs  userinfo.rs  websocket_headers.rs
src/dblog/: logmessage.rs
src/server/: channel_server.rs
wordpress-plugin/: rust-relay-chat.php
wordpress-plugin/assets/: chat.css  chat.js
wordpress-plugin/includes/: chat.js  functions.php
