[package]
name = "rust-relay-chat"
version = "0.1.0"
authors = ["Dave Smith <dave@sophoservices.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11.1"
simplelog = "0.8.0"
log = "0.4.11"
http = "^0.2"
serde_json = "1.0"
serde = { version = "^1.0", features = ["derive"] }
chrono = "0.4"
mysql = "*"
hmac-sha256 = "0"

hex = "*"