[package]
name = "rust-relay-chat"
version = "0.1.0"
authors = ["Dave Smith <dave@sophoservices.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11"
simplelog = "0.8"
log = "0.4"
http = "^0.2"
serde_json = "1.0"
serde = { version = "^1.0", features = ["derive"] }
chrono = "0.4"
#mysql = "21"
hmac-sha256 = "0"
rand = { version="0.*",features=["getrandom"] }
rand_chacha = "*"
hex = "*"
native-tls = "0.2"

[features]
dblog = []